FIX: horizontal scroll problems

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -140,6 +140,7 @@
 
 .evidences__container {
   position: relative;
+  height: 50vh;
 }
 
 .evidences {
@@ -150,12 +151,20 @@
   scroll-behavior: smooth;
 }
 
+.evidences::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+.evidences {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
 .child {
-  height: calc(100vh - var(--nav-height-sm));
+  height: 50vh;
   width: 80%;
   border-radius: 5px;
   margin-right: 2rem;
-  padding: 20px 0;
   display: inline-block;
   scroll-snap-align: center;
 }
