--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,15 +58,15 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  scroll-snap-type: y mandatory;
+  /* scroll-snap-type: y mandatory; */
   scroll-behavior: smooth;
 }
 
 section {
   height: 100vh;
   width: 100%;
-  padding-top: var(--nav-height-sm);
-  scroll-snap-align: start;
+  /* padding-top: var(--nav-height-sm); */
+  /* scroll-snap-align: start; */
 }
 
 a {
